# rp_pico_2_w

./: .gitmodules  README.md  git.md
pico-usb-pwm/: CLI_command_ref.md  CMakeLists.txt  README.md  main.c  pico_pwm.py
pico_proj1/: #test.c#  CMakeLists.txt  CMakeLists.txt~  README.md  README2.md  hello_world.c  hello_world.c~  main.c  main_comment.c  main_old.c
pico_proj1/pico-sdk/: .gitmodules
pico_proj1/pico-sdk/lib/pico-sensor-lib/: CMakeLists.txt  README.md
pico_proj1/pico-sdk/lib/pico-sensor-lib/src/: i2c.c  i2c_adt7410.c  i2c_aht.c  i2c_am2320.c  i2c_as621x.c  i2c_bmp180.c  i2c_bmp280.c  i2c_dps310.c  i2c_hdc302x.c  i2c_hts221.c  i2c_htu21d.c  i2c_htu31d.c  i2c_lps.c  i2c_mcp9808.c  i2c_mpl115a2.c  i2c_mpl3115a2.c  i2c_ms5611.c  i2c_ms8607.c  i2c_pct2075.c  i2c_sht3x.c  i2c_sht4x.c  i2c_shtc3.c  i2c_si7021.c  i2c_stts22h.c  i2c_tc74.c  i2c_tmp102.c  i2c_tmp117.c
script/: set_base_repo.sh  to_install.md
wifi_measure_db_project/: CMakeLists.txt  CMakeLists.txt~  GEN_README.md  README.md  main.c  sht30.c  sht30.h
wifi_measure_db_project/endpoint_server/: RAEDME.md  README_mysql_endpoint.md  endpoint_server  endpoint_server.c  endpoint_server_mysql.c  nfo.md  nfo.md~  pico_measurements.db
wifi_measure_db_project/endpoint_server/simply_web_mysql/: config.php  index.php
wifi_measure_db_project/endpoint_server/simply_web_mysql/v2/: index.php
wifi_measure_db_project/web_app/: config.php  index.php
wifi_project/: CMakeLists.txt  README.md  lwipopts.h  main.c  pico_http_post_project.md
wifi_project/endpoint_server/: RAEDME.md  endpoint_server.c
(+1 files in other folders)
